Fix issue when suggesting payment plan for a company defendant

--- a/src/main/features/claimant-response/views/payment-plan.njk
+++ b/src/main/features/claimant-response/views/payment-plan.njk
@@ -22,7 +22,10 @@
           { monthlyIncomeAmount: monthlyIncomeAmount | numeral }) }}</p>
       <p>{{ t('Their total monthly expenses are {{ monthlyExpensesAmount }}',
           { monthlyExpensesAmount: monthlyExpensesAmount | numeral }) }}</p>
-      {{ financialDetailsTable(label = 'See their financial details', statementOfMeans = statementOfMeans, classes = 'form-group') }}
+
+      {% if not claim.claimData.defendant.isBusiness %}
+        {{ financialDetailsTable(label = 'See their financial details', statementOfMeans = statementOfMeans, classes = 'form-group') }}
+      {% endif %}
 
       <input type="hidden" name="totalAmount" value="{{ totalAmount }}"/>
       {{ poundInput('Regular payments of', 'instalmentAmount', form, 'For example, £10', bold = true) }}
