Full defence with mediation

--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -82,7 +82,7 @@
 {% endmacro %}
 
 {% macro claimRejectedFreeMediationYESForClaimantDashboard(claim) %}
-  {{ t('{{ defendantName }} has rejected the claim. But they’ve suggested a mediation session to help resolve this dispute.',
+  {{ t('{{ defendantName }} has rejected the claim. They’ve suggested a mediation session to help resolve this dispute.',
     { defendantName: claim.claimData.defendant.name }) }}
 {% endmacro %}
 
@@ -93,10 +93,10 @@
       { defendantName: claim.claimData.defendant.name }) }}
   </p>
 
-  <p>{{ externalLink('Find out how mediation works (PDF, 399KB)', 'https://formfinder.hmctsformfinder.justice.gov.uk/ex730-eng.pdf') }}</p>
+  <p>{{ t(externalLink('Find out how mediation works', 'https://formfinder.hmctsformfinder.justice.gov.uk/ex730-eng.pdf') + ' (PDF, 399KB)') | safe }}</p>
 
   <p>
-    {{ t('You need to email {{ emailAddress }} before {{ respondToMediationDeadline }} to tell us if you agree to mediation or not.',
+    {{ t('You need to email {{ emailAddress }} before before 4pm on {{ respondToMediationDeadline }} to tell us if you agree to mediation or not.',
       { emailAddress: supportEmailAddress, respondToMediationDeadline: claim.respondToMediationDeadline | date }) }}
   </p>
   <p>
