--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -27,7 +27,8 @@ ccjRequestedForDefendantClaimDetails %}
   claimPartAdmittedAlreadyPaidForClaimantClaimDetails %}
 
 {% from "./claimStatus/settlementAgreementClaimant.njk" import
-  settlementAgreementSignedByClaimantClaimDetails %}
+  settlementAgreementSignedByClaimantClaimDetails,
+  settlementAgreementSignedByClaimantDeadlinePassedClaimDetails %}
 
 {% from "./claimStatus/claimFullyAdmitted.njk" import
   claimFullAdmissionForDefendantClaimDetails %}
@@ -62,6 +63,8 @@ ccjRequestedForDefendantClaimDetails %}
         {% endif %}
       {% elif state.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_FULL_ADMIT_PAY_IMMEDIATELY_PAST_DEADLINE %}
         {{ claimFullAdmissionForClaimantClaimDetails(claim) }}
+      {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_AND_DEFENDANT_NOT_SIGNED %}
+        {{ settlementAgreementSignedByClaimantDeadlinePassedClaimDetails(claim, csrf) }}
       {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION %}
         {{ settlementAgreementSignedByClaimantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.CCJ_REQUESTED %}
