--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -45,7 +45,8 @@
   offerRejectedForDefendantDashboard %}
 
 {% from "./claimStatus/settlementAgreementClaimant.njk" import
-  settlementAgreementSignedByClaimantDashboard %}
+  settlementAgreementSignedByClaimantDashboard,
+  settlementAgreementSignedByClaimantDeadlinePassedDashboard %}
 
 {% from "./claimStatus/offerSettlement.njk" import offerSettlementReachedDashboard %}
 
@@ -60,6 +61,8 @@
     {{ ccjRequestedForClaimantDashboard(claim) }}
   {% elif status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_FULL_ADMIT_PAY_IMMEDIATELY_PAST_DEADLINE %}
     {{ claimFullAdmissionForClaimantDashboard(claim) }}
+  {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_AND_DEFENDANT_NOT_SIGNED %}
+    {{ settlementAgreementSignedByClaimantDeadlinePassedDashboard(claim) }}
   {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION %}
     {{ settlementAgreementSignedByClaimantDashboard(claim) }}
   {% elif status === ClaimStatus.RESPONSE_SUBMITTED %}
