--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -53,12 +53,12 @@
         {{ row(label = 'How would you like the defendant to pay?', bold = true, value = alternatePaymentMethodResponse,
           changeLink = ClaimantResponsePaths.alternateRepaymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
 
-        {% if draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.INSTALMENTS.value %}
+        {% if draft.courtOfferedPaymentIntention.paymentOption.value === PaymentType.INSTALMENTS.value %}
           {{ row(label = 'Regular payments of', bold = true, value = draft.courtOfferedPaymentIntention.repaymentPlan.instalmentAmount | numeral,
             changeLink = ClaimantResponsePaths.paymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false) }}
-          {{ row(label = 'Frequency of payments', bold = true, value = draft.courtOfferedPaymentIntention.repaymentPlan.frequency | renderFrequencyViewType,
+          {{ row(label = 'Frequency of payments', bold = true, value = draft.courtOfferedPaymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
             bottomBorder = false) }}
-          {{ row(label = 'Date for first instalment', bold = true, value = draft.courtOfferedPaymentIntention.repaymentPlan.startDate | date,
+          {{ row(label = 'Date for first instalment', bold = true, value = draft.courtOfferedPaymentIntention.repaymentPlan.firstPaymentDate | date,
             bottomBorder = true) }}
         {% endif %}
       {% endif %}
@@ -80,7 +80,7 @@
     {%  if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value %}
       {{ tableStart('settlementAgreement', 'Settlement agreement') }}
 
-      {% if claim.response.paymentIntention.paymentDate %}
+      {% if draft.courtOfferedPaymentIntention.paymentOption.value === PaymentType.BY_SPECIFIED_DATE.value %}
         {% set amountToPay = 'the full amount' %}
         {% if claim.response.responseType == ResponseType.PART_ADMISSION.value %}
           {% set amountToPay = claim.response.amount | numeral %}
@@ -99,18 +99,18 @@
           value = draft.courtOfferedPaymentIntention.paymentDate | date,
           bottomBorder = true, bold = true
         ) }}
-      {% elseif claim.response.paymentIntention.repaymentPlan %}
+      {% elseif draft.courtOfferedPaymentIntention.paymentOption.value === PaymentType.INSTALMENTS.value %}
         {{ row(label = 'The offer',
           value = t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
             { defendantFullName: claim.response.defendant.name,
-              instalmentAmount: claim.response.paymentIntention.repaymentPlan.instalmentAmount | numeral,
-              paymentSchedule: claim.response.paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
-              firstPaymentDate: claim.response.paymentIntention.repaymentPlan.firstPaymentDate | date
+              instalmentAmount: draft.courtOfferedPaymentIntention.repaymentPlan.instalmentAmount | numeral,
+              paymentSchedule: draft.courtOfferedPaymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
+              firstPaymentDate: draft.courtOfferedPaymentIntention.repaymentPlan.firstPaymentDate | date
             }),
           bottomBorder = true, bold = true
         ) }}
         {{ row(label = 'Completion date',
-          value = draft.courtOfferedPaymentIntention.repaymentPlan.lastPaymentDate | date,
+          value = draft.courtOfferedPaymentIntention.repaymentPlan.completionDate | date,
           bottomBorder = true, bold = true
         ) }}
       {% endif %}
