--- a/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
+++ b/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
@@ -1,17 +1,17 @@
 {% from "./paymentPlanTable.njk" import paymentPlanTable %}
 
-{% macro repaymentPlanBlock(heading, paymentPlan) %}
+{% macro repaymentPlanBlock(heading, instalmentAmount, paymentSchedule, firstPaymentDate, lastPaymentOn, lengthOfPayment) %}
   {% if heading %}
     <h2 class="heading-medium">{{ t(heading) }}</h2>
   {% endif %}
 
   {{ paymentPlanTable(
     id = 'payment-table',
-    instalmentAmount = paymentPlan.instalmentAmount,
-    paymentSchedule = paymentPlan.frequency,
-    firstPaymentDate = paymentPlan.startDate,
-    lastPaymentOn = paymentPlan.calculateLastPaymentDate(),
-    lengthOfPayment = paymentPlan.calculatePaymentLength()
+    instalmentAmount = instalmentAmount,
+    paymentSchedule = paymentSchedule,
+    firstPaymentDate = firstPaymentDate,
+    lastPaymentOn = lastPaymentOn,
+    lengthOfPayment = lengthOfPayment
   )
   }}
 {% endmacro %}
