--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
@@ -26,15 +26,14 @@
   {% endif %}
 
   {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-    <p> {{ t('You said you’ll pay {{ claimantName }} {{ amount }} before 4pm on {{ paymentDate }}.',
-        { claimantName: claimantName, amount: amount, paymentDate: paymentDate }) }} </p>
-    <p> {{ t('If you pay by cheque or transfer the money must be clear in their account.') }} </p>
-    <p> {{ t('If they don’t receive the money by then, they can request a County Court Judgment against you.') }} </p>
+    <p>{{ t('You said you’ll pay {{ claimantName }} {{ amount }} before 4pm on {{ paymentDate }}.',
+        { claimantName: claimantName, amount: amount, paymentDate: paymentDate }) }}</p>
+    <p>{{ t('If you pay by cheque or transfer the money must be clear in their account.') }}</p>
+    <p>{{ t('If they don’t receive the money by then, they can request a County Court Judgment against you.') }}</p>
     <p>
       {{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}
-      {{ t('if you need their payment details.') }}
+      {{ t('if you need their payment details. Make sure you get receipts for any payments.') }}
     </p>
-    <p> {{ t('Make sure you get receipts for any payments.') }} </p>
 
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
     <p> {{ t('You’ve offered to pay {{ claimantName }} {{ amount }} on {{ paymentDate }}.',
