--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForDefendant.njk
@@ -8,7 +8,7 @@
   {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
     {{ t('You’ve admitted all of the claim and said you’ll pay the full amount immediately.') }}
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-    {{ t('You’ve admitted all of the claim and said you’ll pay the full amount by {{ paymentDate }}.',
+    {{ t('You’ve admitted all of the claim and offered to pay the full amount by {{ paymentDate }}.',
       { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}
   {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
     {{ t('You’ve admitted all of the claim and offered to pay the full amount in instalments.') }}
