--- a/src/main/features/response/views/statement-of-means/carer.njk
+++ b/src/main/features/response/views/statement-of-means/carer.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, yesNoRadio, saveAndContinueButton, errorSummary %}
 
-{% set heading = 'Are you a carer?' %}
+{% set heading = 'Do you claim Carer’s Allowance or Carer’s Credit?' %}
 
 {% block content %}
 
@@ -10,12 +10,12 @@
 
       <form method="post" novalidate
             class="analytics-submit-event-trigger"
-            data-event-action="SoM: Are you a carer?"
+            data-event-action="SoM: Do you claim Carer’s Allowance or Carer’s Credit?"
             data-event-label-from="option">
 
         {{ csrfProtection(csrf) }}
 
-        {{ yesNoRadio(t('Are you a carer?'), 'option', form) }}
+        {{ yesNoRadio(t('Do you claim Carer’s Allowance or Carer’s Credit?'), 'option', form) }}
 
         {{ saveAndContinueButton() }}
 
