--- a/src/main/features/response/views/statement-of-means/partner/partner.njk
+++ b/src/main/features/response/views/statement-of-means/partner/partner.njk
@@ -15,7 +15,7 @@
 
         {{ csrfProtection(csrf) }}
 
-        <p>{{ t('This can be a boyfriend, girlfriend, husband, wife or civil partner.') }}</p>
+        <p>{{ t('For example, a boyfriend, girlfriend, husband, wife or civil partner.') }}</p>
         {{ yesNoRadio(t('Do you live with a partner'), 'option', form) }}
 
         {{ saveAndContinueButton() }}
