--- a/src/main/features/response/views/statement-of-means/partner/partner-pension.njk
+++ b/src/main/features/response/views/statement-of-means/partner/partner-pension.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, yesNoRadio, saveAndContinueButton, errorSummary %}
 
-{% set heading = 'Does your partner receive a state pension?' %}
+{% set heading = 'Does your partner receive a pension?' %}
 
 {% block content %}
 
@@ -10,12 +10,12 @@
 
       <form method="post" novalidate
             class="analytics-submit-event-trigger"
-            data-event-action="SoM: Does your partner receive a state pension?"
+            data-event-action="SoM: Does your partner receive a pension?"
             data-event-label-from="option">
 
         {{ csrfProtection(csrf) }}
 
-        {{ yesNoRadio(t('Does your partner receive a state pension?'), 'option', form) }}
+        {{ yesNoRadio(t('Does your partner receive a pension?'), 'option', form) }}
 
         {{ saveAndContinueButton() }}
 
