--- a/src/main/features/response/views/statement-of-means/partner/partner-age.njk
+++ b/src/main/features/response/views/statement-of-means/partner/partner-age.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, yesNoRadio, saveAndContinueButton, errorSummary %}
 
-{% set heading = 'Is your partner over 18?' %}
+{% set heading = 'Is your partner aged 18 or over?' %}
 
 {% block content %}
 
@@ -10,7 +10,7 @@
 
       <form method="post" novalidate
             class="analytics-submit-event-trigger"
-            data-event-action="SoM: Is your partner over 18?"
+            data-event-action="SoM: Is your partner aged 18 or over?"
             data-event-label-from="option">
 
         {{ csrfProtection(csrf) }}
