--- a/src/main/features/response/views/statement-of-means/partner/partner-severe-disability.njk
+++ b/src/main/features/response/views/statement-of-means/partner/partner-severe-disability.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, yesNoRadio, saveAndContinueButton, errorSummary %}
 
-{% set heading = 'Is your partner’s disability considered a severe disability?' %}
+{% set heading = 'Is your partner severely disabled?' %}
 
 {% block content %}
 
@@ -10,12 +10,12 @@
 
       <form method="post" novalidate
             class="analytics-submit-event-trigger"
-            data-event-action="SoM: Is your partner’s disability considered a severe disability?"
+            data-event-action="SoM: Is your partner severely disabled?"
             data-event-label-from="option">
 
         {{ csrfProtection(csrf) }}
 
-        {{ yesNoRadio(t('Is your partner’s disability considered a severe disability?'), 'option', form) }}
+        {{ yesNoRadio(t('Is your partner severely disabled?'), 'option', form) }}
 
         {{ saveAndContinueButton() }}
 
