--- a/src/main/features/response/views/statement-of-means/check-and-send.njk
+++ b/src/main/features/response/views/statement-of-means/check-and-send.njk
@@ -196,27 +196,41 @@
 {% endif %}
 
 {% set priorityDebt = draft.statementOfMeans.priorityDebt %}
+{% set priorityDebtCount = 1 %}
 {{ row('Debts you are behind on', '', StatementOfMeansPaths.priorityDebtsPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false, bold = true, topBorder = true) }}
 {% if priorityDebt.mortgage.populated %}
-  {{ row(PriorityDebtType.MORTGAGE.displayValue | capitalize, priorityDebt.mortgage.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {{ row(priorityDebtCount + '. Debt Type', PriorityDebtType.MORTGAGE.displayValue | capitalize, '', bottomBorder = false, bold = true) }}
+  {{ row('Arrears repayment', priorityDebt.mortgage.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {% set priorityDebtCount = priorityDebtCount + 1 %}
 {% endif %}
 {% if priorityDebt.rent.populated %}
-  {{ row(PriorityDebtType.RENT.displayValue | capitalize, priorityDebt.rent.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {{ row(priorityDebtCount + '. Debt Type', PriorityDebtType.RENT.displayValue | capitalize, '', bottomBorder = false, bold = true) }}
+  {{ row('Arrears repayment', priorityDebt.rent.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {% set priorityDebtCount = priorityDebtCount + 1 %}
 {% endif %}
 {% if priorityDebt.councilTax.populated %}
-  {{ row(PriorityDebtType.COUNCIL_TAX_COMMUNITY_CHARGE.displayValue | capitalize, priorityDebt.councilTax.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {{ row(priorityDebtCount + '. Debt Type', PriorityDebtType.COUNCIL_TAX_COMMUNITY_CHARGE.displayValue | capitalize, '', bottomBorder = false, bold = true) }}
+  {{ row('Arrears repayment', priorityDebt.councilTax.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {% set priorityDebtCount = priorityDebtCount + 1 %}
 {% endif %}
 {% if priorityDebt.gas.populated %}
-  {{ row(PriorityDebtType.GAS.displayValue | capitalize, priorityDebt.gas.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {{ row(priorityDebtCount + '. Debt Type', PriorityDebtType.GAS.displayValue | capitalize, '', bottomBorder = false, bold = true) }}
+  {{ row('Arrears repayment', priorityDebt.gas.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {% set priorityDebtCount = priorityDebtCount + 1 %}
 {% endif %}
 {% if priorityDebt.electricity.populated %}
-  {{ row(PriorityDebtType.ELECTRICITY.displayValue | capitalize, priorityDebt.electricity.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {{ row(priorityDebtCount + '. Debt Type', PriorityDebtType.ELECTRICITY.displayValue | capitalize, '', bottomBorder = false, bold = true) }}
+  {{ row('Arrears repayment', priorityDebt.electricity.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {% set priorityDebtCount = priorityDebtCount + 1 %}
 {% endif %}
 {% if priorityDebt.water.populated %}
-  {{ row(PriorityDebtType.WATER.displayValue | capitalize, priorityDebt.water.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {{ row(priorityDebtCount + '. Debt Type', PriorityDebtType.WATER.displayValue | capitalize, '', bottomBorder = false, bold = true) }}
+  {{ row('Arrears repayment', priorityDebt.water.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {% set priorityDebtCount = priorityDebtCount + 1 %}
 {% endif %}
 {% if priorityDebt.maintenance.populated %}
-  {{ row(PriorityDebtType.MAINTENANCE_PAYMENTS.displayValue | capitalize, priorityDebt.maintenance.amount | numeral, '', bottomBorder = false, bold = true) }}
+  {{ row(priorityDebtCount + '. Debt Type', PriorityDebtType.MAINTENANCE_PAYMENTS.displayValue | capitalize, '', bottomBorder = false, bold = true) }}
+  {{ row('Arrears repayment', priorityDebt.maintenance.amount | numeral, '', bottomBorder = false, bold = true) }}
 {% endif %}
 
 
