--- a/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
+++ b/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
@@ -1,27 +1,27 @@
-{% macro termsOfAgreement(id, response, paymentPlan, totalAmount) %}
+{% macro termsOfAgreement(id, response, courtOfferedPaymentIntention, totalAmount) %}
   <fieldset id="{{ id }}" class="form-group">
     <legend>
       <span class="visually-hidden">{{ t( 'Payment plan' ) }}</span>
     </legend>
 
-    {% if response.paymentIntention.paymentDate %}
+    {% if courtOfferedPaymentIntention.paymentOption.value === PaymentType.BY_SPECIFIED_DATE.value %}
       {% set amountToPay = 'the full amount' %}
       {% if response.responseType == ResponseType.PART_ADMISSION.value %}
         {% set amountToPay = totalAmount | numeral %}
       {% endif %}
       {{ row('The offer', t('{{ defendantFullName }} will pay ' + amountToPay + ', no later than {{ paymentDate }}',
-        { defendantFullName: response.defendant.name, paymentDate: response.paymentIntention.paymentDate | date }
+        { defendantFullName: response.defendant.name, paymentDate: courtOfferedPaymentIntention.paymentDate | date }
       )) }}
-      {{ row('Completion date', response.paymentIntention.paymentDate | date) }}
-    {% elseif response.paymentIntention.repaymentPlan %}
+      {{ row('Completion date', courtOfferedPaymentIntention.paymentDate | date) }}
+    {% elseif courtOfferedPaymentIntention.paymentOption.value === PaymentType.INSTALMENTS.value %}
       {{ row('The offer', t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
         { defendantFullName: response.defendant.name,
-          instalmentAmount: response.paymentIntention.repaymentPlan.instalmentAmount | numeral,
-          paymentSchedule: response.paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
-          firstPaymentDate: response.paymentIntention.repaymentPlan.firstPaymentDate | date
+          instalmentAmount: courtOfferedPaymentIntention.repaymentPlan.instalmentAmount | numeral,
+          paymentSchedule: courtOfferedPaymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
+          firstPaymentDate: courtOfferedPaymentIntention.repaymentPlan.firstPaymentDate | date
         }
       )) }}
-      {{ row('Completion date', paymentPlan.calculateLastPaymentDate(response.paymentIntention.repaymentPlan.firstPaymentDate) | date) }}
+      {{ row('Completion date', courtOfferedPaymentIntention.repaymentPlan.completionDate | date) }}
     {% endif %}
 
   </fieldset>
