--- a/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJDefendant.njk
@@ -19,5 +19,5 @@
   <p>{{ t('If you pay the debt within one month of the date of judgment, the CCJ is removed from the public register. You can pay £15 to ' +
     externalLink('apply for a certificate', 'https://www.gov.uk/government/publications/form-n443-application-for-a-certificate-of-satisfaction-or-cancellation') +
     ' that confirms this.') | safe }}</p>
-  <p>{{ downloadResponseLink(claim, 'Download your response') }}</p>
+  <p>{{ downloadResponseLink(claim) }}</p>
 {% endmacro %}
