--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
@@ -1,4 +1,5 @@
 {% from "form.njk" import csrfProtection, submitButton %}
+{% from "./utilityMacros.njk" import downloadAgreementLink %}
 
 {% macro settlementAgreementSignedByClaimantDashboard(claim) %}
     {{ t('You’ve signed a settlement agreement. The defendant can choose to sign it or not.') }}
@@ -6,6 +7,10 @@
 
 {% macro settlementAgreementSignedByClaimantDeadlinePassedDashboard(claim) %}
   {{ t('The defendant has not responded to your settlement agreement. You can request a County Court Judgment against them.') }}
+{% endmacro %}
+
+{% macro settlementAgreementSignedByBothClaimantDashboard(claim) %}
+  {{ t('You’ve both signed a settlement agreement') }}
 {% endmacro %}
 
 {% macro settlementAgreementSignedByClaimantClaimDetails(claim) %}
@@ -29,4 +34,23 @@
     {{ csrfProtection(csrf) }}
     {{ submitButton('Request a County Court Judgment') }}
   </form>
+{% endmacro %}
+
+{% macro settlementAgreementSignedByBothClaimantClaimDetails(claim) %}
+  <h2 class="heading-small">{{ t('You’ve both signed a settlement agreement') }}</h2>
+  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+    <p>{{ t('The agreement says the defendant will pay you in full by {{ paymentDate }}.',
+        { paymentDate: claim.settlement.getLastOffer().paymentIntention.paymentDate | date }) }}</p>
+    {% elif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+    <p>{{ t('The agreement says the defendant will pay you in instalments of {{ instalmentAmount }} {{ paymentSchedule }} starting {{ firstPaymentDate }}.',
+        {
+          instalmentAmount: paymentIntention.repaymentPlan.instalmentAmount | numeral,
+          paymentSchedule: paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule | lower,
+          firstPaymentDate: paymentIntention.repaymentPlan.firstPaymentDate | date
+        }) }}</p>
+  {% endif %}
+  <p>{{ t('The agreement explains what you can do if the defendant breaks the terms.') }}</p>
+  <p>{{ downloadAgreementLink(claim, 'Download the settlement agreement') }}</p>
+  <p>{{ t('When you’ve been paid in full, you need to let us know.') }}</p>
+  <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary">Tell us you've been paid</a>
 {% endmacro %}
