--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -46,13 +46,16 @@
 
 {% from "./claimStatus/settlementAgreementClaimant.njk" import
   settlementAgreementSignedByClaimantDashboard,
-  settlementAgreementSignedByClaimantDeadlinePassedDashboard %}
+  settlementAgreementSignedByClaimantDeadlinePassedDashboard,
+  settlementAgreementSignedByBothClaimantDashboard %}
 
 {% from "./claimStatus/offerSettlement.njk" import offerSettlementReachedDashboard %}
 
 {% from "./claimStatus/admissionByCCJClaimant.njk" import admissionByCCJClaimantDashboard %}
 {% from "./claimStatus/admissionByCCJDefendant.njk" import admissionByCCJDefendantDashboard %}
-{% from "./claimStatus/settlementAgreementDefendant.njk" import settlementAgreementSignedByClaimantDefendantDashboard %}
+{% from "./claimStatus/settlementAgreementDefendant.njk" import
+  settlementAgreementSignedByClaimantDefendantDashboard,
+  settlementAgreementSignedByBothDefendantDashboard %}
 
 {% macro caseStatusForClaimant(status, claim) %}
   {% if status === ClaimStatus.NO_RESPONSE %}
@@ -71,6 +74,8 @@
     {{ settlementAgreementSignedByClaimantDeadlinePassedDashboard(claim) }}
   {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_ADMISSION %}
     {{ settlementAgreementSignedByClaimantDashboard(claim) }}
+  {% elif status === ClaimStatus.ADMISSION_SETTLEMENT_AGREEMENT_REACHED %}
+    {{ settlementAgreementSignedByBothClaimantDashboard(claim) }}
   {% elif status === ClaimStatus.RESPONSE_SUBMITTED %}
     {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
       {% if claim.response.defenceType === DefenceType.ALREADY_PAID %}
@@ -116,6 +121,8 @@
       {{ settlementAgreementSignedByClaimantDefendantDashboard(claim) }}
     {% elif status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_FULL_ADMIT_PAY_IMMEDIATELY_PAST_DEADLINE %}
       {{ claimFullAdmissionForDefendantDashboard(claim) }}
+    {% elif status === ClaimStatus.ADMISSION_SETTLEMENT_AGREEMENT_REACHED %}
+      {{ settlementAgreementSignedByBothDefendantDashboard(claim) }}
     {% elif status === ClaimStatus.RESPONSE_SUBMITTED %}
       {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
         {% if claim.response.defenceType === DefenceType.ALREADY_PAID %}
