--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -1,4 +1,5 @@
 {% from "internalLink.njk" import internalLink %}
+{% from "./utilityMacros.njk" import downloadAgreementLink %}
 
 {% macro offerSettlementReachedDashboard() %}
   {{ t('You’ve both signed a legal agreement. The claim is now settled.') }}
@@ -10,7 +11,7 @@
     {{ t('You’ve both signed a legal agreement. The claim is now settled.') }}
   </p>
   <p>
-    {{ _downloadAgreementLink(claim) }}
+    {{ downloadAgreementLink(claim) }}
   </p>
 {% endmacro %}
 
@@ -51,7 +52,7 @@
     </p>
 
     <p>
-      {{ _downloadAgreementLink(claim) }}
+      {{ downloadAgreementLink(claim) }}
     </p>
 
     <p>
@@ -68,7 +69,7 @@
       {{ t('You’ve both signed a legal agreement. The claim is now settled.') }}
     </p>
     <p>
-      {{ _downloadAgreementLink(claim) }}
+      {{ downloadAgreementLink(claim) }}
     </p>
   {% endif %}
 {% endmacro %}
@@ -108,12 +109,12 @@
 
     <p> {{ t('The agreement explains what you can do if the defendant breaks the terms.') }} </p>
     <p>
-      {{ _downloadAgreementLink(claim) }}
+      {{ downloadAgreementLink(claim) }}
     </p>
 
     <p> {{ t('When you’ve been paid in full, you need to let us know.') }} </p>
     <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary">Tell us you've been paid</a>
-    
+
     {% if claim.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
       <hr>
       <p>
@@ -130,13 +131,8 @@
       {{ t('You’ve both signed a legal agreement. The claim is now settled.') }}
     </p>
     <p>
-      {{ _downloadAgreementLink(claim) }}
+      {{ downloadAgreementLink(claim) }}
     </p>
   {% endif %}
 
-{% endmacro %}
-
-{% macro _downloadAgreementLink(claim) %}
-  <a href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">
-    {{ t('Download the settlement agreement') }}</a> {{ t(' (PDF)') }}
 {% endmacro %}
