--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
@@ -1,16 +1,42 @@
 {% from "form.njk" import csrfProtection, submitButton %}
-{% from "./utilityMacros.njk" import downloadResponseLink %}
+{% from "internalLink.njk" import internalLink %}
+{% from "./utilityMacros.njk" import downloadResponseLink, signAgreementLink, downloadAgreementLink %}
 
 {% macro settlementAgreementSignedByClaimantDefendantDashboard(claim) %}
   {{ t('{{ claimantName }} asked you to sign a settlement agreement', { claimantName: claim.claimData.claimant.name }) }}
 {% endmacro %}
 
+{% macro settlementAgreementSignedByBothDefendantDashboard(claim) %}
+  {{ t('You’ve both signed a settlement agreement') }}
+{% endmacro %}
+
 {% macro settlementAgreementSignedByClaimantDefendantClaimDetails(claim) %}
-  {% set defendantName = claim.claimData.defendant.name %}
   <h2 class="heading-small">{{ t('{{ claimantName }} asked you to sign a settlement agreement', { claimantName: claim.claimData.claimant.name }) }}</h2>
   <p>{{ t('They accepted your repayment plan and asked you to sign a settlement agreement to formalise it.') }}</p>
   <p>{{ t('If you sign the agreement, they can’t request a County Court Judgment against you unless you break the terms.') }}</p>
   <p>{{ t('If you don’t sign or respond before 4pm on {{ deadline }} they can request a County Court Judgment against you.', deadline = claim.responseDeadline | date) }}</p>
+  <p>{{ signAgreementLink(claim, 'View and sign the settlement agreement') }}</p>
+  <p>{{ downloadResponseLink(claim) }}</p>
+{% endmacro %}
 
+{% macro settlementAgreementSignedByBothDefendantClaimDetails(claim) %}
+  <h2 class="heading-small">{{ t('You’ve both signed a settlement agreement') }}</h2>
+  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+    <p>{{ t('The agreement says you’ll repay {{ amount }} by {{ paymentDate }}.',
+        { amount: amountToPay,
+          paymentDate: claim.settlement.getLastOffer().paymentIntention.paymentDate | date })
+      }}</p>
+  {% elif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+    <p>{{ t('The agreement says you’ll repay {{ instalmentAmount }} {{ paymentSchedule }} starting {{ firstPaymentDate }}.',
+        {
+          instalmentAmount: paymentIntention.repaymentPlan.instalmentAmount | numeral,
+          paymentSchedule: paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule | lower,
+          firstPaymentDate: paymentIntention.repaymentPlan.firstPaymentDate | date
+        }) }}</p>
+  {% endif %}
+  <p>{{ t('The claimant can’t request a County Court Judgment against you unless you break the terms.') }}</p>
+  <p>{{ downloadAgreementLink(claim, 'Download the settlement agreement') }}</p>
+  <p>{{ t(internalLink('Contact ' + claim.claimData.claimant.name, DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId })) +
+      ' if you need their payment details. Make sure you get receipts for any payments.') | safe }}</p>
   <p>{{ downloadResponseLink(claim) }}</p>
 {% endmacro %}
